src/issuer/snapshots/authorize:configuration_id:response.snap
---
source: src/issuer/authorize.rs
assertion_line: 460
expression: "&response"
---
code: "[code]"
state: "1234"
redirect_uri: "http://localhost:3000/callback"
