src/issuer/snapshots/authorize:format:state.snap
---
source: src/issuer/authorize.rs
assertion_line: 467
expression: state
---
subject_id: normal_user
stage:
  authorized:
    client_id: 96bfb9cb-0513-7d64-5532-bed74c48f9ab
    redirect_uri: "http://localhost:3000/callback"
    code_challenge: B6qi8EPWVTnONnO8XNSAsN7O2ejthn3pCKwZUO0HzU8
    code_challenge_method: S256
    items:
      - AuthorizationDetail:
          type: openid_credential
          format: jwt_vc_json
          credential_definition:
            type:
              - VerifiableCredential
              - EmployeeIDCredential
        credential_configuration_id: EmployeeID_JWT
        credential_identifiers:
          - PHLEmployeeID
expires_at: "[expires_at]"
