src/issuer/snapshots/create_offer:pre-authorized:state.snap
---
source: src/issuer/create_offer.rs
assertion_line: 386
expression: "&state"
---
subject_id: normal_user
stage:
  offered:
    items:
      - AuthorizationDetail:
          type: openid_credential
          credential_configuration_id: EmployeeID_JWT
        credential_configuration_id: EmployeeID_JWT
        credential_identifiers:
          - PHLEmployeeID
    tx_code: "[tx_code]"
expires_at: "[expires_at]"
