src/issuer/snapshots/credential:identifier:response.snap
---
source: src/issuer/credential.rs
assertion_line: 552
expression: "&response"
---
credential: "[credential]"
c_nonce: "[c_nonce]"
c_nonce_expires_in: 599
notification_id: "[notification_id]"
