src/issuer/snapshots/credential:identifier:state.snap
---
source: src/issuer/credential.rs
assertion_line: 576
expression: state
---
subject_id: normal_user
stage:
  validated:
    access_token: ABCDEF
    c_nonce: "[c_nonce]"
    c_nonce_expires_at: "[c_nonce_expires_at]"
    credentials:
      PHLEmployeeID:
        credential_identifier: PHLEmployeeID
        credential_configuration_id: EmployeeID_JWT
expires_at: "[expires_at]"
