src/issuer/snapshots/credential:identifier:vc.snap
---
source: src/issuer/credential.rs
assertion_line: 568
expression: vc
---
"@context":
  - "https://www.w3.org/2018/credentials/v1"
  - "http://credibil.io/credentials/v1"
id: "http://credibil.io/credentials/EmployeeIDCredential"
type:
  - VerifiableCredential
  - EmployeeIDCredential
name:
  "@value": Employee ID
  "@language": en-NZ
description:
  "@value": Credibil employee ID credential
  "@language": en-NZ
issuer: "http://credibil.io"
credentialSubject:
  address:
    locality: Wellington
    street_address: 123 Fake St
  email: normal.user@example.com
  family_name: Person
  given_name: Normal
  id: "did:key:z6Mkj8Jr1rg3YjVWWhg7ahEYJibqhjBgZt1pDCbT4Lv7D4HX"
validFrom: "[validFrom]"
