src/issuer/snapshots/credential_offer:request_jwt:response.snap
---
source: src/issuer/credential_offer.rs
assertion_line: 109
expression: offer_resp
---
credential_offer:
  credential_issuer: "http://vercre.io"
  credential_configuration_ids:
    - EmployeeID_JWT
  grants:
    "urn:ietf:params:oauth:grant-type:pre-authorized_code":
      pre-authorized_code: "[pre-authorized_code]"
      tx_code:
        input_mode: numeric
        length: 6
        description: Please provide the one-time code received
