src/issuer/snapshots/deferred:deferred_ok:response.snap
---
source: src/issuer/deferred.rs
assertion_line: 168
expression: "&response"
---
credential: "[credential]"
c_nonce: "[c_nonce]"
c_nonce_expires_in: 599
notification_id: "[notification_id]"
